tests/NormalTests/paczka1/small_fuzzy/35450713.err
Error in line 7: A469 A614 86,5
Error in line 10: 9vonL A469 34,3
